# OpenConverter

./: .augment-guidelines  .gitignore  README.md  README_ZH.md
.github/workflows/: build.yaml  ci.yml  release.yaml  review.yaml  sonarqube.yaml
doc/: COMPONENT_DIRECTORY.md
src/: CMakeLists.txt  main.cpp
src/builder/include/: ai_processing_page.h  batch_file_dialog.h  batch_item.h  batch_mode_helper.h  batch_output_widget.h  batch_queue.h  batch_queue_dialog.h  compress_picture_page.h  converter_runner.h  create_gif_page.h  cut_video_page.h  extract_audio_page.h  file_selector_widget.h  filter_tag_widget.h  info_view_page.h  open_converter.h  progress_widget.h  python_manager.h  remux_page.h  transcode_page.h  transcoder_helper.h
src/builder/src/: ai_processing_page.cpp  batch_file_dialog.cpp  batch_input_widget.cpp  batch_item.cpp  batch_mode_helper.cpp  batch_output_widget.cpp  batch_queue.cpp  batch_queue_dialog.cpp  compress_picture_page.cpp  converter_runner.cpp  create_gif_page.cpp  cut_video_page.cpp  encode_setting.ui  extract_audio_page.cpp  file_selector_widget.cpp  filter_tag_widget.cpp  info_view_page.cpp  open_converter.cpp  open_converter.ui  progress_widget.cpp  python_manager.cpp  remux_page.cpp  transcode_page.cpp  transcoder_helper.cpp
src/common/include/: encode_parameter.h  info.h  theme_utils.h
src/common/src/: encode_parameter.cpp  info.cpp  theme_utils.cpp
src/component/include/: batch_input_widget.h  bitrate_widget.h  codec_selector_widget.h  file_selector_widget.h  format_selector_widget.h  pixel_format_widget.h  python_install_dialog.h  quality_widget.h  resolution_widget.h
src/component/src/: batch_input_widget.cpp  batch_output_widget.cpp  bitrate_widget.cpp  codec_selector_widget.cpp  file_selector_widget.cpp  filter_tag_widget.cpp  format_selector_widget.cpp  pixel_format_widget.cpp  progress_widget.cpp  python_install_dialog.cpp  quality_widget.cpp  resolution_widget.cpp  simple_video_player.cpp
src/engine/src/: converter.cpp
src/modules/: enhance_module.py
src/resources/: default.desktop  lang_chinese.qm  lang_chinese.ts  linglong.yaml  macos_launcher.sh  requirements.txt
src/resources/qss/: dark.qss  light.qss
src/tests/: CMakeLists.txt  transcoder_test.cpp
src/transcoder/include/: transcoder.h  transcoder_bmf.h  transcoder_ffmpeg.h  transcoder_fftool.h
src/transcoder/src/: transcoder_bmf.cpp  transcoder_ffmpeg.cpp  transcoder_fftool.cpp
tool/: README_DMG.md  build_and_package_macos.sh  create_dmg_simple.sh  dmg_install_instructions.txt  download_models.sh  fix_gatekeeper.sh  fix_macos_libs.sh  fix_whitespace.sh
